--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -40,21 +40,13 @@
 								</td>
 								<td class="client_row_type">
 								<span id="client_typeId" class="hide"><%= client.client_type %></span>
-									<% if client.client_type == 0 %>
-										<span>Khách lữ hành</span>
-									<% elsif client.client_type == 1 %>
-										<span>Thành viên</span>
-									<% end %>
+									<% index =  client.client_type - 1 %>
+									<span><%= @client_type[index][:text] %></span>
 								</td>
 								<td class="client_row_gender">
 								<span id="client_genderId" class="hide"><%= client.gender %></span>
-									<% if client.gender == 0 %>
-										<span>Nam</span>
-									<% elsif client.gender == 1 %>
-										<span>Nữ</span>
-									<% elsif client.gender == 2 %>
-                        				<span>Khác</span>
-									<% end %>
+									<% index =  client.gender - 1 %>
+									<span><%= @client_gender[index][:text] %></span>
 								</td>
 								<td class="client_row_phone"> <%= client.phone_number %></td>
 								<td class="client_row_email"> <%= client.email %></td>
@@ -276,6 +268,7 @@
 			let tColumnType = tRow.querySelector("#client_typeId").innerHTML * 1;
             let tColumnGender = tRow.querySelector("#client_genderId").innerHTML * 1;
 			let tColumnDob = (new Date(tRow.querySelector("#client_dob").innerHTML)).getMonth() + 1;
+			console.log(!filterByType[tColumnType - 1].status && isUsingFilterType());
             
             if(!(tColumnName.toLowerCase().includes(filterByString.toLowerCase())
                 || tColumnPhone.toLowerCase().includes(filterByString.toLowerCase())
@@ -284,8 +277,8 @@
 				|| (tColumnDob*1 !== filterByDobSelectedOption*1 && filterByDobSelectedOption !== 0)){
 				tRow.classList.add("hide_row");
             }
-			else if((!filterByType[tColumnType].status && isUsingFilterType())
-                    || (!filterByGender[tColumnGender].status && isUsingFilterGender())){
+			else if((!filterByType[tColumnType - 1].status && isUsingFilterType())
+                    || (!filterByGender[tColumnGender - 1].status && isUsingFilterGender())){
                 tRow.classList.add("hide_row");
             }
 			else{
