Styling form for reservation

--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -123,12 +123,13 @@
     </div>
     <div class="col-lg-6 row">
       <div class="row">
-        <p class="col-lg-3">Người lớn</p>
+        <p class="col-lg-3">Thêm</p>
         <div class="col-lg-7 row" style="padding-right: 0; margin-right: 0">
+          <p class="col-lg-2">NL</p>
           <div class="col-lg-4  form-group"  style="padding-right: 0; margin-right: 0">
             <%= form.number_field :adults, in: 0 .. 20, class:"form-control" %>
           </div>
-          <p class="col-lg-4 padding-left">Trẻ em</p>
+          <p class="col-lg-2 ">TE</p>
           <div class="col-lg-4 form-group"  style="padding-right: 0; margin-right: 0">
             <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
           </div>
