--- a/app/views/cooperate_reservation/_step2.html.erb
+++ b/app/views/cooperate_reservation/_step2.html.erb
@@ -20,17 +20,29 @@
 
 
             <%= p.fields_for "[reservations_attributes][]", Reservation.new, :index => room_id do |form| %>
-              <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
-              <%= form.number_field :adults, in: 0 .. 20 ,class:"form-control " %>
-
-
+              <div class="row">
+                <div class="col row">
+                  <div class="col-3">
+                    <p class="text-center">NL</p>
+                  </div>
+                  <div class="col-7">
+                    <%= form.number_field :adults, in: 0 .. 20 ,class:"form-control " %>
+                  </div>
+                </div>
+                <div class="col row">
+                  <div class="col-3">
+                    <p class="text-center">TE</p>
+                  </div>
+                  <div class="col-7">
+                    <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
+                  </div>
+                </div>
+              </div>
               <%= form.hidden_field(:room_id, :value => room_id)  %>
               <%= form.hidden_field(:employee_id, :value => current_user.employee_id)  %>
               <%= form.hidden_field(:arrival_date, :value => @arrival_date)  %>
               <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
               <%= form.hidden_field(:status, :value => 1) %>
-
-
               <%= form.hidden_field(:client_name) %>
               <%= form.hidden_field(:client_citizen_id) %>
             <% end %>
