--- a/app/views/cooperate_reservation/_step1.html.erb
+++ b/app/views/cooperate_reservation/_step1.html.erb
@@ -1,8 +1,8 @@
-
+<h4 class="p-3">Thông tin trưởng đoàn</h4>
 <div class="row">
   <div class="col-lg-6 row">
     <div class="row end-row-md">
-      <p class="col-lg-3">Tên trưởng đoàn</p>
+      <p class="col-lg-3">Trưởng đoàn</p>
       <div class="col-lg-7 form-group">
         <%= client.text_field :name, class:"form-control", placeholder: "Nguyễn Văn A" %>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
@@ -50,7 +50,7 @@
 <div class="row">
   <div class="col-lg-6 row">
     <div class="row end-row-md">
-      <p class="col-lg-3">Số điện thoại</p>
+      <p class="col-lg-3">SDT</p>
       <div class="col-lg-7 form-group">
         <%= client.telephone_field   :phone_number, class:"form-control", placeholder: "0123456789" %>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
@@ -80,7 +80,7 @@
   <%= client.hidden_field(:client_type, :value => 2) %>
 </div>
 <br><br>
-<h4>Những phòng đã chọn</h4>
+<h4 class="p-3">Những phòng đã chọn</h4>
 <table class="table">
   <thead>
   <tr>
