--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -53,6 +53,32 @@
 <% end %>
 
 <script>
+    let reservation_attributes_id = '#__reservations_attributes__'
+    let radioCheckedValue = $("input[name='leader_info']:checked").val()
+    radioCheckedValue = radioCheckedValue.slice(12,15)
+    $('#_client_attributes_name').keyup(function(){
+        let client_name = $('#_client_attributes_name').val()
+        $(reservation_attributes_id + radioCheckedValue + '_client_name').val(client_name)
+    })
+    $('#_client_attributes_citizen_id').keyup(function(){
+        let client_citizen_id = $('#_client_attributes_citizen_id').val()
+        $(reservation_attributes_id + radioCheckedValue + '_client_citizen_id').val(client_citizen_id)
+
+    })
+
+    $("input[type='radio']").click(function(){
+        var radioValue = $("input[name='leader_info']:checked").val();
+        if(radioValue){
+            //Sample radioValue: leader_info_103
+            let client_name = $('#_client_attributes_name').val()
+            let client_citizen_id = $('#_client_attributes_citizen_id').val()
+
+            let radio_room_id = radioValue.slice(12,15)
+            let string_id = reservation_attributes_id + radio_room_id
+            $(string_id + '_client_name').val(client_name)
+            $(string_id + '_client_citizen_id').val(client_citizen_id)
+        }
+    });
     var current_step;
     $(document).ready(function(){
         current_step = 1
