--- a/app/views/cooperate_reservation/_step2.html.erb
+++ b/app/views/cooperate_reservation/_step2.html.erb
@@ -19,7 +19,7 @@
             <% room_id = room_id.tr('[]', '') %>
 
 
-            <%= p.fields_for "[reservations_attributes][]", Reservation.new, :index => room_id do |form| %>
+            <%= p.fields_for "[reservations_attributes][]", Reservation.new, :index => r["id"] do |form| %>
               <div class="row">
                 <div class="col row">
                   <div class="col-3">
@@ -43,10 +43,9 @@
               <%= form.hidden_field(:arrival_date, :value => @arrival_date)  %>
               <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
               <%= form.hidden_field(:status, :value => 1) %>
-              <%= form.hidden_field(:client_name) %>
-              <%= form.hidden_field(:client_citizen_id) %>
+              <%= form.hidden_field(:client_name, :value=> "N/A") %>
+              <%= form.hidden_field(:client_citizen_id, :value=> "N/A") %>
             <% end %>
-            <!--              <p>2 NL - 1 TE</p>-->
           </div>
         </div>
       <% end %>
@@ -84,12 +83,10 @@
 
       </div>
     </div>
-
   </div>
 </div>
 
 <script>
-
     <% if session[:reservation_params] %>
     <% params = session[:reservation_params] %>
     <% if params["payment_attributes"] %>
