Fixing previous button bug

--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -110,6 +110,11 @@
             let theURL = '/cooperate_reservation/choose_rooms'
             window.location.href = theURL
         }
+        else if (current_step == 1)
+        {
+            $('#finish_button').hide()
+            $("#next_button").show()
+        }
 
     })
 </script>
