Adding description field for text area in form

--- a/app/views/cooperate_reservation/_step2.html.erb
+++ b/app/views/cooperate_reservation/_step2.html.erb
@@ -78,7 +78,7 @@
         </div>
         <div class="">
           <p>Ghi chú</p>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <%= p.text_area :description, class:"form-control", rows: 3 %>
         </div>
 
       </div>
