--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -53,6 +53,41 @@
 <% end %>
 
 <script>
+
+    function updateTotal()
+    {
+<!--        const queryString = window.location.search;-->
+<!--        const urlParams = new URLSearchParams(queryString);-->
+
+<!--        if (urlParams.get('adults'))-->
+<!--            $('#adults').val(urlParams.get('adults'))-->
+<!--        else-->
+<!--            $('#adults').val(0)-->
+<!--        if (urlParams.get('children'))-->
+<!--            $('#children').val(urlParams.get('children'))-->
+<!--        else-->
+<!--            $('#children').val(0)-->
+<!--        if (urlParams.get('price_type_id'))-->
+<!--        {-->
+<!--            var price_type_id = urlParams.get('price_type_id') - 1-->
+<!--            var string = 'select#price_type>option:eq(' + price_type_id + ')'-->
+<!--            $(string).attr('selected', true);-->
+<!--        }-->
+<!--        else-->
+<!--            $('select#price_type>option:eq(1)').attr('selected', true);-->
+
+<!--        var room_price = (<%#= @room_price_value %>);-->
+<!--        var children = $('#children').val()-->
+<!--        var children_price = <%#=@children_price %>-->
+
+<!--            children= parseInt(children) *children_price-->
+
+<!--        var adults = $('#adults').val();-->
+<!--        var adults_price = <%#=@adults_price %>-->
+<!--            adults = parseInt(adults) * adults_price-->
+
+<!--        return room_price + children + adults-->
+    }
     let reservation_attributes_id = '#__reservations_attributes__'
     let radioCheckedValue = $("input[name='leader_info']:checked").val()
     radioCheckedValue = radioCheckedValue.slice(12,15)
