--- a/app/views/room_prices/index.html.erb
+++ b/app/views/room_prices/index.html.erb
@@ -235,7 +235,7 @@
     btn_ApDungChoised.addEventListener('click', function() {
         let minPrice = document.querySelector("#room_input_filter_priceFroom").value * 1;
         let maxPrice = document.querySelector("#room_input_filter_priceTo").value * 1;
-        if (minPrice<maxPrice) {
+        if (minPrice<=maxPrice || maxPrice===0) {
             filterByPriceMin = minPrice ; 
             filterByPriceMax = maxPrice;
             updateTable();
@@ -350,10 +350,10 @@
           let tColumnPriceType = tRow.querySelector(".roomPrice_roomPriceId").innerHTML * 1;
           let tColumnAvailable = tRow.querySelector("#roomPrice_availableId").innerHTML;
           let tColumnPrice = tRow.querySelector("#roomPrice_priceId").innerHTML * 1;
-          console.log(tColumnPrice);
 
-          if(!(tColumnDate.toLowerCase().includes(filterByString.toLowerCase()) 
-                && filterByString.length > 0)){
+          if((!tColumnDate.toLowerCase().includes(filterByString.toLowerCase()) 
+                && filterByString.length > 0)
+                ||(((tColumnPrice < filterByPriceMin && filterByPriceMin > 0) || (tColumnPrice > filterByPriceMax && filterByPriceMax > 0)) )) {
               tRow.classList.add("hide_row");
           }
           else if((!filterByRoomType[tColumnRoomType-1].status && isUsingFilterRoomType())
