--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<!-- <h2>Edit <%= resource_name.to_s.humanize %></h2>
 <div>
   Employee ID:
   <%= current_user.employee_id %>
@@ -40,6 +40,55 @@
   </div>
 <% end %>
 
+<h3>Cancel my account</h3>
+
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+<%= link_to "Back", :back %> -->
+<center>
+  <div class="row justify-content-center">
+    <p class="col-xl-2 col-sm-3 col-4">Employee ID : </p>
+    <div class="col-xl-3 col-sm-5 col-8 form-group">
+      <%= current_user.employee_id %>
+    </div>
+  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="row justify-content-center">
+      <p class="col-xl-2 col-sm-3 col-4">Email : </p>
+      <div class="col-xl-3 col-sm-5 col-8 form-group">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" , class:"form-control"%>
+      </div>
+    </div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+    <div class="row justify-content-center">
+      <p class="col-xl-2 col-sm-3 col-4">Current password : </p>
+      <div class="col-xl-3 col-sm-5 col-8 form-group">
+        <%= f.password_field :current_password, autocomplete: "current-password" , class:"form-control"%>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <p class="col-xl-2 col-sm-3 col-4">Password : </p>
+      <div class="col-xl-3 col-sm-5 col-8 form-group">
+        <%= f.password_field :password, autocomplete: "new-password" , class:"form-control"%>
+        <% if @minimum_password_length %>
+        <em><%= @minimum_password_length %> characters minimum</em>
+        <% end %>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <p class="col-xl-2 col-sm-3 col-4">Confirm password : </p>
+      <div class="col-xl-3 col-sm-5 col-8 form-group">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" , class:"form-control"%>
+      </div>
+    </div>
+    <div class="actions tBotton">
+      <%= f.submit "Update"  => 'btn btn-primary'%>
+    </div>
+  <% end %>
+</center>
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
